--- a/client/index.html
+++ b/client/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <script src="https://maps.googleapis.com/maps/api/js?key=YOUR_API_KEY&libraries=places"></script>
+    <script async src="https://maps.googleapis.com/maps/api/js?key=YOUR_API_KEY&libraries=places"></script>
     <link rel="icon" type="image/svg+xml" href="/src/assets/blub.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>1Step</title>                                                     
